docs/assets/scss/docs.scss
/* ... */
.cf-header-menu {
    display: inline-block;
    margin-top: -.25rem;
    font-size: 1.5rem;
    font-weight: bold;
    line-height: .75;
}

.cf-header-icon {
    display: inline-block;
    width: 1rem;
    height: 1rem;
    vertical-align: middle;
}


// Home page
.home-icons .fa {
    font-size: 3.5rem;
    vertical-align: middle;
}
.home-icons .fa + .fa {
    margin-left: .5rem;
}
.home-feature {
    > .small {
        margin-top: -.75rem;
    }
    @include media-breakpoint-up(md) {
        margin-top: 2.2rem;
    }
}
.btn-start {
    padding: .75rem 2rem;
    margin-bottom: .25rem;
    font-weight: 600;
    color: #fff;
    background-color: rgba(255,255,255,.15);
    border-color: rgba(255,255,255,.8);
    border-width: 2px;
    box-shadow: 2px 2px .2rem rgba(0,0,0,.35);

    @include hover-focus() {
        color: #222;
        background-color: rgba(255,255,255,.9);
    }
}

// Jumbotrons
.jumbotron-home {
    padding: 2rem 1.5rem;
    margin-bottom: 2rem;
    color: rgba(255,255,255,.9);
    // text-align: center;
    // background-color: $docs-color;
    background-image: linear-gradient(135deg, #0c5782 0%, #117cba 100%);

    .logo-home {
        display: block;
        margin: 0 auto;
        filter: drop-shadow(0 0 7px rgba(255,255,255,.15));
    }

    h1, h2 {
        font-weight: bold;
        color: $white;
    }

    .lead {
        margin-top: 1rem;
        margin-bottom: 1.5rem;
        font-size: 1.5rem;
    }

    .splash-home {
        border-bottom: 1px solid rgba(255,255,255,.5);
    }

    @include media-breakpoint-down(md) {
        .container {
            width: 100%;
        }
    }
}

.container-divider {
    border-top: 1px solid rgba(0,0,0,.5);

    @include media-breakpoint-up(md) {
        &.col,
        &[class*="col-"] {
            border-top: 0;
            border-left: 1px solid rgba(0,0,0,.5);
        }
    }
}

.jumbotron-docs {
    padding: .5rem .375rem;
    margin-bottom: 0;
    color: rgba(255,255,255,.9);
    // background-color: $docs-color;
    background-image: linear-gradient(135deg, #0c5782 0%, #117cba 100%);

    @include media-breakpoint-up(sm) {
        padding: 1rem .5rem;
    }

    .lead {
        margin-bottom: .25rem;
    }
}

// AnchorJS
.anchorjs-link {
    transition: opacity .2s ease-in-out .1s;

    @include hover-focus {
        color: inherit;
        text-decoration: none;
    }
}

// ClipboardJS
.cf-clipboard {
    position: relative;
    display: block;
    float: right;
    line-height: 1;

    + .highlight {
        margin-top: 0;
    }

    .tooltip {
        white-space: nowrap;
    }
}
.btn-clipboard {
    position: absolute;
    top: 0;
    right: 0;
}

// TOC
#markdown-toc {
    ul {
        padding-left: 2rem;
        margin-top: .25rem;
        margin-bottom: .25rem;
    }
}

// Sidenav
.cf-sidebar {
    padding-top: 1rem;
    padding-bottom: 1rem;
    background-color: $uibase-25;
    border-bottom: 1px solid $uibase-200;

    @include media-breakpoint-up(md) {
        padding-bottom: 3rem;
        border-right: 1px solid $uibase-200;
        border-bottom: 0;
    }

    .cf-sidebar-header {
        margin-bottom: .75rem;
    }

    .nav {
        // margin-top: -.25rem;
    }

    .nav-link {
        display: block;
        padding: .15rem .5rem;

        &.active {
            color: $white;
            background-color: #0c5782;
        }

        @include media-breakpoint-down(md) {
            display: inline-block;
        }
    }
}

// TOC
#markdown-toc {
    font-size: .9375rem;
}

@include media-breakpoint-up(xl) {
    #contents,
    #markdown-toc {
        display: none;
    }
}

.cf-toc {
    order: 2;
    padding-top: 1rem;
    padding-bottom: 1rem;
    font-size: .875rem;

    .section-toc {
        @supports (position: sticky) {
            position: sticky;
            top: 4.375rem;
            max-height: calc(100vh - 4.375rem);
            overflow-y: auto;
            overflow-x: visible;
        }

        padding-top: .5rem;
        padding-bottom: .5rem;
        padding-left: 1rem;
        margin-bottom: 0;
        list-style: none;
        border-left: 1px solid #8ac;

        ul {
            padding-left: .875rem;
            list-style: none;
        }

        li {
            position: relative;
            padding: .0625rem 0;
        }

        .active::before {
            position: absolute;
            top: 0;
            bottom: 0;
            left: -1rem;
            display: block;
            width: .1875rem;
            font-size: 5rem;
            line-height: .5rem;
            content: " ";
            background-color: #246;
        }

        .section-toc-h3 {
            padding-left: .875rem;
        }
        .section-toc-h4 {
            padding-left: 1.75rem;
        }
        .section-toc-h5 {
            padding-left: 2.625rem;
        }
    }
}

// Title item
.cf-title {
    font-size: 3rem;

    + p {
        font-size: 1.15rem;
        font-weight: 600;
    }
}

// Content
.cf-content {
    padding-top: 1rem;
    padding-bottom: 2rem;

    @include media-breakpoint-up(md) {
        padding-top: 1.5rem;
        padding-right: 2.5rem;
        padding-left: 2.5rem;
    }

    > h2 {
        margin-top: 2.5rem;
    }

    > h3 {
        margin-top: 1.5rem;
    }
}

h2,
h3,
h4 {
    > code {
        font-weight: 500;
    }
}

// Example container
.cf-example {
    padding: 1rem;
    background-color: #fff;
    border: 1px solid #e1e1e8;
    border-radius: .25rem .25rem 0 0;

    + .cf-clipboard + .highlight {
        border-top: 0;
        @include border-top-radius(0);
    }

    @include media-breakpoint-up(sm) {
        padding: 1.5rem;
    }

    @include clearfix();
}
.cf-example-bottom {
    margin-bottom: 1rem;
    @include border-bottom-radius(.25rem);
}
/* ... */

